# gvdbutil

./: .gitignore  CMakeLists.txt  gvdbutil.spec
headers/: cli.h  std_out.h
sources/: cli.c
src/: main.c  str_out.c
